<resources>
    <string name="app_name">SumCalculator</string>
    <string name="key_seven">7</string>
    <string name="key_eight">8</string>
    <string name="key_nine">9</string>
    <string name="key_multiply">*</string>
    <string name="key_four">4</string>
    <string name="key_five">5</string>
    <string name="key_six">6</string>
    <string name="key_subtract">-</string>
    <string name="key_one">1</string>
    <string name="key_two">2</string>
    <string name="key_three">3</string>
    <string name="key_add">+</string>
    <string name="key_zero">0</string>
    <string name="key_clear">C</string>
    <string name="key_equal">=</string>
    <string name="image_desc">calculator image</string>
    <string name="calculator_output">0</string>
    <string name="expression_zero">0</string>
</resources>
